--- a/css/index.css
+++ b/css/index.css
@@ -91,4 +91,18 @@ p{
   .header-nav ul {
     padding: 70px;
   }
+
+  h1{
+    font-size: 60px;
+  }
+
+  h2{
+    font-size: 30px;
+  }
+
+  p{
+    font-size: 18px;
+    letter-spacing: 5%;
+  }
+
 }
