--- a/css/index.css
+++ b/css/index.css
@@ -74,6 +74,22 @@ p{
   font-size: 18px;
 }
 
+button{
+  font-family: "Jaldi", sans-serif;
+  font-size: 20px;
+  color: #F2F8FD;
+  background-color: #0E3728;
+  border-radius: 60px;
+  border-color: #0E3728;
+  padding: 10px 50px;
+}
+
+button:hover {
+  background-color: #C7ECE1;
+  color: #0E3728;
+
+}
+
 @media (min-width: 850px) {
   .logo a{
     font-size: 30px; 
@@ -103,6 +119,10 @@ p{
   p{
     font-size: 18px;
     letter-spacing: 5%;
+  }
+
+  button{
+    font-size: 30px;
   }
 
 }
