--- a/css/assets.css
+++ b/css/assets.css
@@ -104,7 +104,7 @@ button:hover {
 footer{
   background-color: #0E3728;
   height: 60px;
-  padding: 100px 0px 0px 10px;
+  padding: 100px 5px 0px 10px;
   display: flex;
 }
 
@@ -123,7 +123,7 @@ footer img{
   display: flex;
   justify-content: flex-end; 
   flex-grow: 1; 
-  margin: 20px; 
+  margin: 11px; 
 }
 
 @media (min-width: 737px) {
@@ -160,5 +160,8 @@ footer img{
   button{
     font-size: 30px;
   }
-
+  
+  .footer-logo{
+    font-size: 30px;
+  }
 }
