--- a/css/login.css
+++ b/css/login.css
@@ -50,7 +50,21 @@ input:focus{
   background-color: #F2F8FD;
 }
 
+textarea {
+border: 1.5px solid #0E3728;
+border-radius: 50px;
+background-color: #EFF7F1;
+color: #0E3728;
+padding: 5px 50px;
+font-family: "Jaldi", sans-serif;
+font-weight: 400;
+font-style: normal;
+font-size: 20px;
+text-align: center;
+margin: 10px;
+outline: none;   
 
+}
 
 h2 span{
   text-decoration: underline;
