--- a/css/assets.css
+++ b/css/assets.css
@@ -77,6 +77,7 @@ h2{
   font-style: normal;
   font-size: 20px;
   margin: 0px;
+  padding: 0%;
 }
 
 p{
@@ -159,4 +160,6 @@ footer img{
   .footer-logo{
     font-size: 30px;
   }
+
+  
 }
