--- a/css/blogpost.css
+++ b/css/blogpost.css
@@ -1,12 +1,44 @@
 .blog-feed h2{
   text-transform: uppercase;
-  margin: 10px;
+  margin: 25px 0px 0px 15px;
 }
 
+.one-post {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 40px; 
+}
 
+.one-post h1{
+  text-align: center;
+}
+
+.one-post img {
+  width: 100%;
+  max-width: 100%;
+  height: 500px;
+  object-fit: cover;
+  border-radius: 50px;
+  border: solid 1.5px #0E3728;
+  transition: all 0.3s ease; 
+  
+}
+
+.one-post p{
+  width: 100%;
+  max-width: 100%;
+  height: 100%;
+
+}
 
 @media (min-width: 737px) {
   .blog-feed h2{
-    margin: 25px;
+    margin: 25px 0px 25px 70px;
   }
+
+ 
+
+  
 }
