--- a/css/index.css
+++ b/css/index.css
@@ -82,13 +82,12 @@
 
 
 .post-container img{
-  width: 550px;
-  height: 300px;
+  height: 340px;
+  width: 360px;
   object-fit: cover;
   border-radius: 50px;
   border: solid 1.5px #0E3728;
-  padding: 0px;
-  
+  padding: 0px;  
 }
 
 
@@ -108,6 +107,10 @@
     margin: 0px 0px 0px 240px;
   }
   
+  .post-container img{
+    width: 550px;
+    height: 300px;  
+  }
 }
 
 
