--- a/css/assets.css
+++ b/css/assets.css
@@ -58,6 +58,10 @@ header:hover{
 a {
   text-decoration: none;
   color: #0E3728;
+  font-family: "Jaldi", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 20px;
 }
 
 
