--- a/css/assets.css
+++ b/css/assets.css
@@ -74,8 +74,16 @@ h1{
   margin: 0px;
 }
 
-
 h2{
+  font-family: "Jaldi", sans-serif;
+  font-weight: 700;
+  font-style: normal;
+  font-size: 30px;
+  color: #0E3728;
+  margin: 0px;
+}
+
+h3{
   font-family: "Jaldi", sans-serif;
   font-weight: 400;
   font-style: normal;
@@ -155,6 +163,9 @@ footer img{
     font-size: 60px;
   }
 
+  h2{
+    font-size: 50px;
+  }
 
   p{
     font-size: 18px;
