--- a/css/admin.css
+++ b/css/admin.css
@@ -1,7 +1,8 @@
 
 .hi{
-  padding: 20px;
-  text-align: center;
+  margin-left: 20px;
+  padding: 30px;
+  
 }
 
 .blog-feed-admin{
@@ -12,11 +13,25 @@
  margin: 40px;
 }
 
-.blog-feed-admin h2{
-  text-transform: uppercase;
+.blog-feed-admin h3{
+  padding: 20px;
  }
+
+.post-container{
+  margin-left: 20px;
+}
 
 .new{
   position: relative;
-  left: 75%
+  align-items: center;
+  
+}
+
+@media (min-width: 737px) {
+  .new{
+    position: absolute;
+    right: 50px;
+    
+  }
+
 }
