--- a/css/index.css
+++ b/css/index.css
@@ -82,7 +82,7 @@
 
 .carousel-item span{
   
-    background-color: #FDF0F2;
+    background-color: #F2F8FD;
     line-height: 2
 
 }
@@ -92,7 +92,7 @@
 }
 
 h3 span {
-  background-color: #FDF0F2;
+  background-color: #F2F8FD;
 }
 
 #display-posts {
@@ -132,7 +132,7 @@ h3 span {
 }
 
 h2 span {
-  background-color: #FDF0F2;
+  background-color: #F2F8FD;
   line-height: 1;
 }
 
