--- a/css/login.css
+++ b/css/login.css
@@ -22,6 +22,11 @@
   padding: 5rem 2rem 2rem 2rem;
 }
 
+.login-form h3{
+  text-transform: capitalize;
+
+}
+
 form {
   display: flex;
   flex-direction: column; 
@@ -66,7 +71,7 @@ outline: none;
 
 }
 
-h2 span{
+h3 span{
   text-decoration: underline;
 }
 
