--- a/css/blogpost.css
+++ b/css/blogpost.css
@@ -1,6 +1,6 @@
-.blog-feed h3{
+.blog-feed-h3{
   text-transform: uppercase;
-  margin: 25px 0px 0px 15px;
+  margin: 40px 0px 0px 20px;
 }
 
 .one-post {
@@ -11,6 +11,8 @@
   padding: 40px; 
 }
 
+
+
 .one-post h1{
   text-align: center;
 }
@@ -18,11 +20,12 @@
 .one-post img {
   width: 100%;
   max-width: 100%;
-  height: 500px;
+  height: 200px;
   object-fit: cover;
   border-radius: 50px;
   border: solid 1.5px #0E3728;
-  transition: all 0.3s ease;   
+  transition: all 0.3s ease; 
+  margin-top: 20px;
 }
 
 .one-post p{
@@ -32,7 +35,11 @@
 }
 
 @media (min-width: 737px) {
-  .blog-feed h2{
-    margin: 25px 0px 25px 70px;
-  } 
+  .blog-feed-h3{
+    margin: 40px 0px 0px 70px;
+  }
+
+  .one-post img {
+    height: 500px;
+  }
 }
